# ecscope

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml
.github/: actionlint.yml  compile-elm-to-js.yml  compile-gleam-to-js.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/: compile-elm.yml
.github/actions/compile-elm/: action.yml
.github/actions/install-elm/: action.yml
.github/workflows/: audit.yml  back-compat-pr.yml  back-compat.yml  build.yml  lint.yml  main.yml  pr.yml  publish-crates.yml  release.yml  scan.yml  test.yml
assets/server/: deps.html
assets/server/css/: deps.css
assets/server/js/: deps.js
src/: args.rs  common.rs  config.rs  debug.rs  errors.rs  handle.rs  main.rs  utils.rs
src/aws/: config.rs
src/cmds/: mod.rs  monitor.rs
src/cmds/deployments/: list.rs  mod.rs
src/cmds/profiles/: add.rs  common.rs  list.rs  mod.rs  utils.rs
src/cmds/profiles/static/: sample-profile.toml
src/domain/: deployment.rs  mod.rs  service.rs
src/domain/profiles/: mod.rs
src/server/: mod.rs
src/server/deployments/: mod.rs  serve.rs
src/server/deployments/client/: README.md  gleam.toml  index.html  manifest.toml  tailwind.config.js
src/server/deployments/client/assets/css/: deps.css
src/server/deployments/client/priv/static/: custom.css  deps.css  deps.mjs
src/server/deployments/client/src/: deps.gleam  effects.gleam  model.gleam  types.gleam  update.gleam  utils.gleam  view.gleam
src/server/deployments/client/test/: serde_test.gleam
src/service/: deployments.rs  mod.rs
src/tui/: app.rs  command.rs  common.rs  event.rs  handle.rs  message.rs  mod.rs  update.rs  view.rs
src/tui/model/: containers.rs  mod.rs  services.rs  tasks.rs
src/tui/static/: help.txt
tests/: help_test.rs  monitor_test.rs  profiles_test.rs
tests/common/: mod.rs
