[package]
name = "ecscope"
version = "0.1.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/ecscope"
description = "ecscope lets you monitor AWS ECS resources from the terminal"
homepage = "https://tools.dhruvs.space/ecscope/"
license = "MIT"
keywords = [
    "cli",
    "ecs",
    "aws",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github"
]

[dependencies]
anyhow = "1.0.95"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.66.0"
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.26"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
tempfile = "3.17.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = {version = "0.8.20", features = ["parse"] }

[dev-dependencies]
assert_cmd = "2.0.16"
pretty_assertions = "1.4.1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "fat"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
