[package]
name = "ecscope"
version = "0.3.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/ecscope"
description = "ecscope lets you monitor AWS ECS resources from the terminal"
homepage = "https://tools.dhruvs.space/ecscope/"
license = "MIT"
keywords = [
    "cli",
    "ecs",
    "aws",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "src/server/deployments/client",
]

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.74.0"
axum = "0.8.3"
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
open = "5.3.2"
rand = "0.9.0"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = {version = "0.8.22", features = ["parse"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

[dev-dependencies]
assert_cmd = "2.0.17"
pretty_assertions = "1.4.1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "fat"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.release-local]
inherits = "dev"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
