[package]
name = "ecscope"
version = "0.4.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/ecscope"
description = "ecscope lets you monitor AWS ECS resources from the terminal"
homepage = "https://tools.dhruvs.space/ecscope/"
license = "MIT"
keywords = [
    "cli",
    "ecs",
    "aws",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "src/server/deployments/client",
    "!src/server/deployments/client/index.html",
    "!src/server/deployments/client/priv",
]

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.74.0"
axum = "0.8.4"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
open = "5.3.2"
rand = "0.9.2"
ratatui = "0.29.0"
regex = "1.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = {version = "0.9.7", features = ["parse"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml", "filters"] }
insta-cmd = "0.6.0"
tempfile = "3.23.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
